force-app/main/default/objects/R360_Org_Unit__c/R360_Org_Unit__c.object-meta.xml
<CustomObject><deploymentStatus>Deployed</deploymentStatus><description>Effective People Master organizational hierarchy.</description><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSharing>true</enableSharing><externalSharingModel>Private</externalSharingModel><label>Resource 360 Org Unit</label><nameField><label>Org Unit Name</label><type>Text</type></nameField><pluralLabel>Resource 360 Org Units</pluralLabel><sharingModel>Private</sharingModel><visibility>Public</visibility></CustomObject>