force-app/main/default/objects/R360_Org_Unit__c/fields/Org_Unit_ID__c.field-meta.xml
<CustomField><fullName>Org_Unit_ID__c</fullName><caseSensitive>false</caseSensitive><externalId>true</externalId><label>Org Unit ID</label><length>80</length><required>true</required><type>Text</type><unique>true</unique></CustomField>