force-app/main/default/objects/R360_Org_Unit__c/fields/Owner_Resource__c.field-meta.xml
<CustomField><fullName>Owner_Resource__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Owner Resource</label><referenceTo>Resource__c</referenceTo><relationshipLabel>Owned Org Units</relationshipLabel><relationshipName>Owned_Org_Units</relationshipName><type>Lookup</type></CustomField>