force-app/main/default/objects/R360_Org_Unit__c/fields/Parent_Unit__c.field-meta.xml
<CustomField><fullName>Parent_Unit__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Parent Unit</label><referenceTo>R360_Org_Unit__c</referenceTo><relationshipLabel>Child Org Units</relationshipLabel><relationshipName>Child_Org_Units</relationshipName><type>Lookup</type></CustomField>