force-app/main/default/objects/R360_Org_Unit__c/fields/Unit_Type__c.field-meta.xml
<CustomField><fullName>Unit_Type__c</fullName><label>Unit Type</label><length>60</length><required>true</required><type>Text</type></CustomField>